--- a/src/test/resources/html/HTMLPuroTest.html
+++ b/src/test/resources/html/HTMLPuroTest.html
@@ -12,7 +12,8 @@
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nesciunt sint asperiores consectetur ea aliquam a eum hic, molestias, architecto dolorem sit? Deserunt aut, quod doloremque nihil sapiente obcaecati alias.</h3>
     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga in, praesentium a unde pariatur exercitationem commodi tenetur iste dolorem officia magnam architecto odit nisi enim, assumenda accusamus eos maiores. Itaque!</h4>
     <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quia ratione omnis aut voluptas neque placeat molestiae quibusdam ex, dolorum esse culpa earum eaque, tempore accusamus illum, nostrum exercitationem debitis?</h5>
+    <p>Paragrafo grande demais!</p>
+    <button>Teste de botão</button><br>
     <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png">
-    <button>Teste de botão</button>
 </body>
 </html>
